# AudioManagerPlugins

./: AudioManagerTypes.fidl  CAmClassActionSetLimitState.cpp  CAmClassActionSetLimitState.h  CAmCommandSenderCAPI.cpp  CAmCommandSenderCAPI.h  CAmCommandSenderService.cpp  CAmCommandSenderService.h  CAmControlReceive.cpp  CAmControlReceive.h  CAmControlSend.cpp  CAmControlSend.h  CAmPolicyEngine.cpp  CAmPolicyEngine.h  CAmPolicySend.cpp  CAmPolicySend.h  CAmSourceActionSetVolume.cpp  CAmSourceActionSetVolume.h  CAmSourceElement.cpp  CAmSourceElement.h  CAmTriggerQueue.h  CAmTypes.h  CAmXmlConfigParser.cpp  CMakeLists.txt  CommandInterface.fidl  IAmPolicySend.h  LICENSE  README  README.html  README.md  audiomanagertypes.xsd  configuration_test.xml
PluginCommandInterfaceCAPI/: CMakeLists.txt
PluginCommandInterfaceCAPI/cmake/: CommonAPI.cmake  FindAudioManager.cmake  command-proxy.ini  command-stub.ini  commonapi4DBus.ini  plugin.pc.in
PluginCommandInterfaceCAPI/fidl/: AudioManagerTypes.fdepl  AudioManagerTypes.fidl  CommandInterface.fdepl  CommandInterface.fidl
PluginCommandInterfaceCAPI/include/: CAmCommandSenderCAPI.h  CAmCommandSenderCommon.h  CAmCommandSenderService.h
PluginCommandInterfaceCAPI/src/: CAmCommandSenderCAPI.cpp  CAmCommandSenderCommon.cpp  CAmCommandSenderService.cpp
PluginCommandInterfaceCAPI/test/: CAmCommandSenderCAPITest.cpp  CAmCommandSenderCAPITest.h  CAmTestCAPIWrapper.cpp  CAmTestCAPIWrapper.h  CMakeLists.txt  MockIAmCommandReceive.h  MockNotificationsClient.h
PluginCommandInterfaceDbus/: CMakeLists.txt
PluginControlInterface/: CMakeLists.txt
PluginControlInterface/include/: CAmControlSenderBase.h  IAmControlReceiverShadow.h
PluginControlInterface/src/: CAmControlSenderBase.cpp  IAmControlReceiverShadow.cpp
PluginControlInterface/test/: CAmControlReceiverShadowTest.cpp  CAmControlReceiverShadowTest.h  CMakeLists.txt  MockIAmControlReceive.h
PluginControlInterfaceGeneric/: CMakeLists.txt  README.md
PluginControlInterfaceGeneric/conf/: audiomanagertypes.xsd  configuration.xml  configuration_async.xml  configuration_test.xml  customtypes.xsd  generic.xml  xsd2header.pl
PluginControlInterfaceGeneric/doc/: PluginControlGeneric.doxyfile  action_connect.dox  action_debug.dox  action_disconnect.dox  action_interrupt.dox  action_setNotificationConfiguration.dox  action_setProperty.dox  action_setSystemProperty.dox  action_setVolume.dox  action_setlimit.dox  action_setmute.dox  action_suspend.dox  actions.dox  classgrouping.dox  condition.dox  configuration.dox  elements.dox  function_table.dox  mainpage.dox  persistence.dox  policy_overview.dox  policyexample.dox  policyhandling.dox  policywritting.dox  reservedProperties.dox  routingActions.dox  trigger.dox  userManual.dox  volume_handling.dox  volumeactions.dox
PluginControlInterfaceGeneric/include/: CAmActionCommand.h  CAmActionConnect.h  CAmActionContainer.h  CAmActionDisconnect.h  CAmActionInterrupt.h  CAmActionLimit.h  CAmActionMute.h  CAmActionRundown.h  CAmActionSetVolume.h  CAmActionSetVolumeCore.h  CAmActionSuspend.h  CAmClassActionConnect.h  CAmClassActionDisconnect.h  CAmClassActionInterrupt.h  CAmClassActionSetLimitState.h  CAmClassActionSetVolume.h  CAmClassActionSuspend.h  CAmClassElement.h  CAmCommonUtility.h  CAmConfigurationReader.h  CAmControlReceive.h  CAmControlSend.h  CAmControllerPlugin.h  CAmDomainElement.h  CAmElement.h  CAmEventSubject.h  CAmGatewayElement.h  CAmHandleStore.h  CAmLogger.h  CAmMainConnectionActionConnect.h  CAmMainConnectionActionDisconnect.h  CAmMainConnectionActionSetLimitState.h  CAmMainConnectionActionSuspend.h  CAmMainConnectionElement.h  CAmPersistenceDefault.h  CAmPersistenceWrapper.h  CAmPolicyAction.h  CAmPolicyEngine.h  CAmPolicyFunctions.h  CAmPolicyReceive.h  (+30 more)
PluginControlInterfaceGeneric/src/: CAmActionCommand.cpp  CAmActionConnect.cpp  CAmActionContainer.cpp  CAmActionDisconnect.cpp  CAmActionInterrupt.cpp  CAmActionLimit.cpp  CAmActionMute.cpp  CAmActionRundown.cpp  CAmActionSetVolume.cpp  CAmActionSetVolumeCore.cpp  CAmActionSuspend.cpp  CAmClassActionConnect.cpp  CAmClassActionDisconnect.cpp  CAmClassActionInterrupt.cpp  CAmClassActionSetLimitState.cpp  CAmClassActionSetVolume.cpp  CAmClassActionSuspend.cpp  CAmClassElement.cpp  CAmCommonUtility.cpp  CAmConfigurationReader.cpp  CAmControlReceive.cpp  CAmControlSend.cpp  CAmControllerPlugin.cpp  CAmDomainElement.cpp  CAmElement.cpp  CAmEventSubject.cpp  CAmGatewayElement.cpp  CAmHandleStore.cpp  CAmMainConnectionActionConnect.cpp  CAmMainConnectionActionDisconnect.cpp  CAmMainConnectionActionSetLimitState.cpp  CAmMainConnectionActionSuspend.cpp  CAmMainConnectionElement.cpp  CAmPersistenceDefault.cpp  CAmPersistenceWrapper.cpp  CAmPolicyAction.cpp  CAmPolicyEngine.cpp  CAmPolicyFunctions.cpp  CAmPolicyReceive.cpp  CAmPolicySend.cpp  (+21 more)
PluginControlInterfaceGeneric/test/: CAmActionCommandTest.cpp  CAmActionCommandTest.h  CAmActionContainerTest.cpp  CAmActionContainerTest.h  CAmGcCommonFunctions.h  CAmTestConfigurations.h  CGmockCommonFunctions.h  CMakeLists.txt  MockCAmActionCommandTest.h  MockCAmActionContainerTest.h  MockIAmControlReceive.h  MockIAmControlSend.h  MockIAmPersistence.h  MockIAmPolicyReceive.h  MockIAmPolicySend.h  TestEventObserver.cpp  TestEventObserver.h  TestObserver.cpp  TestObserver.h  common.h
PluginControlInterfacePulse/: CMakeLists.txt  README
PluginControlInterfacePulse/data/: libPluginControlInterface.conf
PluginControlInterfacePulse/include/: ControlConfig.h  ControlSender.h
PluginControlInterfacePulse/src/: ControlSender.cpp
PluginRoutingAdapterALSA/: CMakeLists.txt  LICENSE.txt
PluginRoutingAdapterALSA/conf/: alsa.xml
PluginRoutingAdapterALSA/doc/: 00_mainpage.dox  01_license.dox  02_dependencies.dox  03_architecture_overview.dox  03_scope.dox  04_amra_alsa_conf.dox  04_architecture_overview.dox  05_amra_alsa_conf.dox  PluginRoutingAdapterALSA.doxyfile
PluginRoutingInterfaceAsync/: CMakeLists.txt
PluginRoutingInterfaceCAPI/: CMakeLists.txt
PluginRoutingInterfaceDbus/: CMakeLists.txt
PluginRoutingInterfacePulse/: CMakeLists.txt  README
(+219 files in other folders)
